# hyperbola

./: .ansible-lint  .bowerrc  .bumpversion.cfg  .dockerignore  .editorconfig  .eslintrc.js  .eslintrc.json  .exrc  .gitattributes  .gitignore  .gitmodules  .htaccess  .htmlhintrc  .pre-commit-config.yaml  .prettierignore  .project  .pydevproject  .pylintrc  .rubocop.yml  Dockerfile  Dockerfile.app  Dockerfile.fixtures  Dockerfile.mysql  Gemfile  LICENSE  LOCAL-DEVELOPMENT.md  MANIFEST.in  Makefile  Pipfile  README.md  Vagrantfile  bower.json  dev-requirements.in  dev-requirements.txt  gulpfile.babel.js  gulpfile.js  index.html  manage.py  package.json  postcss.config.js  (+13 more)
.secrets/: README.md
ansible/: app-local-mysql.yml  app-local.yml  app.yml  lb-local.yml  local.ini  mysql-local.yml  production.ini  provision.yml  requirements.yml  wiki.yml
ansible-docker/: local.ini
ansible/roles/: requirements.yml
ansible/roles/ansible-tzdata/: README.md
ansible/roles/hyperbola-base/: README.md
ansible/roles/hyperbola-nginx/: README.md
ansible/roles/hyperbola-wiki/: README.md
ansible/roles/wiki/: README.md
ansible/vars/: cloudflare.yml
app/hyperbola/: __init__.py  settings.py  urls.py  wsgi.py
app/hyperbola/contact/: admin.py  models.py  urls.py  views.py
app/hyperbola/core/: __init__.py  middleware.py  redis.py  views.py
app/hyperbola/frontpage/: __init__.py  admin.py  models.py  urls.py  views.py
app/hyperbola/helpers/: __init__.py  compressors.py  profiler.py  views.py
app/hyperbola/lifestream/: __init__.py  admin.py  models.py  syndication.py  urls.py  views.py
app/hyperbola/static/: fonts
app/hyperbola/templates/: 404.html  base.html
assets/: .gitignore  admin
conf/: 01-hyperbola.conf  02-hyperbola-wiki.conf  README.md  django.wsgi  hyperbola-site  nginx.hyperbola-staging.conf  nginx.hyperbola.assets.conf  nginx.hyperbola.conf  nginx.hyperbola.gzip.conf  nginx.hyperbola.media.conf  nginx.hyperbola.staging-assets.conf  nginx.hyperbola.wiki.conf  wiki-config.ru
conf/base/: 01-log-format.conf
conf/directives/: log-output.conf
conf/gunicorn/: hyperbola-staging.py  hyperbola.py
conf/live/: 01-hyperbola.conf  02-assets.conf  03-media.conf
conf/nginx/: 00-no-default.conf  01-hyperbola.conf  02-hyperbola-wiki.conf
conf/requirements/: base.txt  development.txt
conf/staging/: 01-hyperbola.conf  02-assets.conf
conf/upstart/: gunicorn_hyperbola-staging.conf  gunicorn_hyperbola.conf
doc/: configuration.md  development.md  local-development.md  release-process.md
docker/: Makefile  fixtures-entrypoint.sh
docker/app/: Dockerfile  settings.py
docker/backend/: Dockerfile  settings.py
docker/fixtures/: Dockerfile  fixtures-entrypoint.sh
docker/ingress/: Dockerfile  ingress.conf  ssl-stapling.conf
docker/mysql/: Dockerfile  mysqld_charset.cnf
docker/static/: Dockerfile  README.md  humans.txt  hyperbola.conf
document-root/: humans.txt
env/: README.md
frklft/: index.html  team.html
frklft/contact/: careers.html  sales.html
frklft/public/: team.html
frklft/src/: dev.py
gunicorn/: hyperbola-production.py  hyperbola-staging.py
hyperbola/: .gitignore  __init__.py  production_settings.py  settings.py  urls.py  wsgi.py
hyperbola/appstore/: urls.py
hyperbola/blog/: models.py  urls.py  views.py
hyperbola/contact/: __init__.py  admin.py  models.py  urls.py  views.py
hyperbola/core/: _ManageMinimizers.py  _TemplateTextMinimizer.py  __init__.py  middleware.py  static.py  views.py
hyperbola/frontpage/: admin.py  models.py  urls.py  views.py
hyperbola/helpers/: inheritance_query_set.py  profiler.py
hyperbola/jamjam/: models.py  urls.py
hyperbola/lifestream/: admin.py  models.py  syndication.py  urls.py  views.py
hyperbola/shortlinks/: models.py  urls.py  views.py
hyperbola/templates/: 404.html  base.html
media.tombstone/: README.md
nginx/: 01-hyperbo.la.conf  01-staging.hyperbo.la.conf  01-www.hyperbolacdn.com.conf  README.md
nginx/base/: 02-extra-security-map.conf  02-gzip.conf
nginx/directive-only/: cache-file-descriptors.conf  charset-utf8.conf  extra-security.conf
nginx/location/: cross-domain-fonts.conf  health-check.conf
nginx/sites/: 00-no-default.conf
nginx/ssl-directive-only/: hsts.conf  spdy.conf  ssl.conf
packer/: app.json
packer/scripts/: ansible.sh  cleanup.sh
public/css/: global.css  grid.css  main.css
public/js/: main.js
roles/: requirements.yml
roles/apt_upgrade/: README.md
roles/hyperbola_base/: README.md
roles/nginx/: README.md
src/: README.md  _header.scss  _syntax.scss  bootstrap.scss  header.scss  hyperbola.browser.js  index.js  lifestream-date-formatter.js  main.css  main.js  main.scss  pygments.solarized-dark.css  pygments.solarized-dark.scss  pygments.solarized-light.css  sqlite.db  variables.scss
src/hyperbola_django/: production_manage.py  production_settings.py  settings.py  urls.py
src/img/: README.md
systemd/: README.md  hyperbola-app@.service  hyperbola-production.service  hyperbola-staging.service  hyperbola-wiki.service  hyperbola-wiki@.service
terraform/: .gitignore  README.md  aws.tf  dns.tf  email.tf  main.tf  terraform.tfstate  terraform.tfvars  vpc.tf
terraform/app-local-iad/: aws.tf  destroy-log.md  main.tf  manually-destroyed.md  temp
terraform/app-prod-pdx/: aws.tf  destroy-log.md  dns.tf  main.tf  manually-destroyed.md  vpc.tf
terraform/global/: destroy-log.md  dns.tf  email.tf  iam.tf  main.tf  manually-destroyed.md
terraform/home.dc.hyperbo.la/: Makefile  main.tf  terraform.tfvars
terraform/hyperbola-cdn/: dns.tf
terraform/hyperbola-wiki/: dns.tf  main.tf  provision.sh.tpl  security-groups.tf
terraform/lab/: README.md  aws.tf  destroy-log.md  main.tf
terraform/state/: README.md  aws.tf  main.tf  terraform.tfvars
tls/: README.md
tls/hyperbo.la/: config  domains.txt
tls/www.hyperbolacdn.com/: config  domains.txt
upstart/: gunicorn-production.conf  gunicorn-staging.conf  hyperbola_wiki.conf
vars/: README.md  cloudfront.yml
virtualenv/: README.md
(+382 files in other folders)
