[tool.black]
line-length = 99
py36 = true
include = '\.pyi?$'
exclude = '''
/(
    \.egg
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | migrations
  | node_modules
  | venv
)/
'''

[tool.poetry]
name = "hyperbola"
version = "0.150.1"
description = "hyperbo.la website of Ryan Lopopolo."
authors = ["Ryan Lopopolo <rjl@hyperbo.la>"]
license = "MIT"
readme = "README.md"

homepage = "https://hyperbo.la"
repository = "https://github.com/lopopolo/hyperbola"
documentation = "https://github.com/lopopolo/hyperbola/tree/master/doc"

keywords = ["django", "webapp", "aws"]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Build Tools",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: JavaScript",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Framework :: Django",
    "Framework :: Django :: 2.2"
]

[tool.poetry.dependencies]
python = "^3.7"
bleach = "^3.0"
bleach-whitelist = "^0.0.9"
django = "^2.2"
django-mysql = "^3.0.0"
django-s3-storage = "^0.12.4"
django-stdimage = "^4.0"
gunicorn = "^19.9"
markdown = "^3.0"
mysqlclient = "^1.3"
pillow = "^6.0.0"
pytz = "*"
awscli = "^1.16"
pygments = "^2.2"
ssm-parameter-store = "^18.7"

[tool.poetry.dev-dependencies]
bumpversion = "^0.5.3"
flake8 = "^3.6"
pylint = "^2.1"
invoke = "^1.2"
pydocstyle = "^3.0"
python-dotenv = "^0.10.1"

[build-system]
requires = ["poetry>=0.12", "setuptools", "wheel"]
build-backend = "poetry.masonry.api"
