[metadata]
version = 0.121.0
name = hyperbola
author = Ryan Lopopolo
author-email = rjl@hyperbo.la
summary = hyperbola: a django website
license = MIT
description-file =
    README.md
home-page = https://github.com/lopopolo/hyperbola
requires-python = >=3.5
classifier =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    Topic :: Internet :: WWW/HTTP
    Topic :: Software Development :: Build Tools
    License :: OSI Approved :: MIT License
    Programming Language :: JavaScript
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Framework :: Django
    Framework :: Django :: 2.0
keywords =
    django
    web
    website
    webpack

[files]
packages =
    hyperbola

[flake8]
exclude = node_modules,.git,./env,./virtualenv,migrations
max-line-length = 119

[isort]
combine_as_imports = true
default_section = THIRDPARTY
include_trailing_comma = true
known_first_party = hyperbola
line_length = 79
multi_line_output = 5
skip = migrations
not_skip = __init__.py

[pep257]
# ignore missing docstrings
add-ignore = D100,D101,D102,D103,D104,D105,D106,D107

[yapf]
align_closing_bracket_with_visual_indent = false
based_on_style = pep8
column_limit = 119
dedent_closing_brackets = true
space_between_ending_comma_and_closing_bracket = false
