[metadata]
version = 0.142.0
name = hyperbola
author = Ryan Lopopolo
author-email = rjl@hyperbo.la
summary = hyperbola: a django website
license = MIT
description-file =
    README.md
home-page = https://github.com/lopopolo/hyperbola
requires-python = >=3.5
classifier =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    Topic :: Internet :: WWW/HTTP
    Topic :: Software Development :: Build Tools
    License :: OSI Approved :: MIT License
    Programming Language :: JavaScript
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Framework :: Django
    Framework :: Django :: 2.0
keywords =
    django
    web
    website
    webpack

[files]
packages =
    hyperbola

[flake8]
exclude = node_modules,.git,venv,migrations
max-line-length = 99

[pep257]
# ignore missing docstrings
add-ignore = D100,D101,D102,D103,D104,D105,D106,D107
